--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<!--<html>lang="en">-->
-<html>
+<!DOCTYPE html> <!--+-->
+<html> <!--+-->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />-->
-  <link rel="stylesheet" href="./libs/leaflet.css" />
-  <link rel="stylesheet" href="./libs/leaflet-measure.css" />
-  <!--<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>-->
-  <script src="./libs/leaflet.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="./libs/Yandex.js"></script>
-  <script src="./libs/leaflet-measure.min.js"></script>
-
-  <title>Document</title>
-  <!--<style>
-    #map {
-      height: 500px;
-    }
-  </style>-->
+<head> <!--+-->
+  <title>Web-карта</title> <!--+-->
+  <meta charset="UTF-8"><!--+-->
+  <script src="./libs/leaflet.js"></script><!--+-->
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script><!--+-->
+  <script src="./libs/Yandex.js"></script> <!--+-->
+  <script src="./libs/leaflet-measure.min.js"></script> <!--+-->
+  <link rel="stylesheet" href="./libs/leaflet.css" /> <!--+-->
+  <link rel="stylesheet" href="./libs/leaflet-measure.css" /> <!--+-->
   <style>
     html,
     body,
@@ -28,17 +18,12 @@
       width: 100%;
       margin: 0;
     }
-
-    /*svg.leaflet-attribution-flag {
-      opacity: 0;
-    }*/
-  </style>
+  </style><!--+-->
 </head>
 
-<body>
-  <!--<h1>Чипс</h1>-->
-  <div id="map"></div>
+<body> <!--+-->
+  <div id="map"></div> <!--+-->
   <script src="./index.js"></script>
-</body>
+</body> <!--+-->
 
-</html>
+</html> <!--+-->
