--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body> <!--+-->
   <div id="map"></div> <!--+-->
-  <script src="./index.js"></script>
+  <script src="./libs/main.js"></script> <!--+-->
 </body> <!--+-->
 
 </html> <!--+-->
