--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <body> <!--+-->
   <div id="map"></div> <!--+-->
+  <script src="data/shapes/AquaparksCustomFixed_const.js"></script>
   <script src="./libs/main.js"></script> <!--+-->
 </body> <!--+-->
 
