--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="./libs/Yandex.js"></script>
   <script src="./libs/leaflet-measure.min.js"></script>
   <script src="libs/leaflet.markercluster.js"></script>
-  <!--<script src="libs/leaflet.markercluster.js.map"></script>-->
+  <script src="libs/heatmap.min.js"></script>
+  <script src="libs/leaflet-heatmap.js"></script>
   <link rel="stylesheet" href="./libs/leaflet.css" />
   <link rel="stylesheet" href="./libs/leaflet-measure.css" />
   <link rel="stylesheet" href="libs/MarkerCluster.css">
