--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <body>
   <div id="map"></div>
   <script src="data/shapes/aquaparks/AquaparksCustomFixed_const.js"></script>
+  <!--<script src="libs/dots_dz.js"></script>
+  <script src="libs/line_dz.js"></script>
+  <script src="libs/polygon_dz.js"></script>-->
   <script src="./libs/main.js"></script>
 </body>
 
