--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
 
 <body>
   <div id="map"></div>
-  <script src="data/shapes/aquaparks/AquaparksCustomFixed_const.js"></script>
-  <!--<script src="libs/dots_dz.js"></script>
+  <script src="data\shapes\dots_dz\dots_dz_data.js"></script>
+  <script src="libs/dots_dz.js"></script>
+
+  <script src="data\shapes\line_dz\line_dz_data.js"></script>
   <script src="libs/line_dz.js"></script>
-  <script src="libs/polygon_dz.js"></script>-->
+
+  <script src="data\shapes\square_dz\square_dz_data.js"></script>
+  <script src="libs/square_dz.js"></script>
+
+  <script src="data/shapes/aquaparks/AquaparksCustomFixed_const.js"></script>
   <script src="./libs/main.js"></script>
 </body>
 
