--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
       padding: 9px;
       border: thick double #be4b66;
     }
+
+    .DOTSmapLgnd {
+      background: rgba(82, 121, 123, 0.85);
+      border-radius: 5px;
+      color: rgb(255, 255, 255);
+      padding: 9px;
+      font-size: 14px;
+      border: thick double #1100ff;
+      max-width: 100px;
+    }
+
+    .LINESmapLgnd {
+      background: rgba(94, 58, 114, 0.85);
+      border-radius: 5px;
+      color: rgb(255, 255, 255);
+      padding: 9px;
+      font-size: 14px;
+      border: thick double #1b012e;
+      max-width: auto;
+    }
   </style>
 </head>
 
