--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <title>Web-карта</title>
   <meta charset="UTF-8">
-  <script src="./libs/leaflet.js"></script>
+  <!-- ! Фикс смещения карты при измерении -->
+  <!--<script src="./libs/leaflet.js"></script>-->
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   <script src="./libs/Yandex.js"></script>
   <script src="./libs/leaflet-measure.min.js"></script>
