--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
   <title>Web-карта</title>
   <meta charset="UTF-8">
   <!-- ! Фикс смещения карты при измерении -->
-  <!--<script src="./libs/leaflet.js"></script>-->
+  <!--<script src="./libs/leaflet.js"></script>--> <!---->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
     integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="./libs/Yandex.js"></script>
-  <script src="./libs/leaflet-measure.min.js"></script>
-  <script src="libs/leaflet.markercluster.js"></script>
-  <script src="libs/heatmap.min.js"></script>
-  <script src="libs/leaflet-heatmap.js"></script>
+    crossorigin=""></script> <!---->
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script><!---->
+  <script src="./libs/Yandex.js"></script> <!---->
+  <script src="./libs/leaflet-measure.min.js"></script> <!---->
+  <script src="libs/leaflet.markercluster.js"></script> <!---->
+  <script src="libs/heatmap.min.js"></script> <!---->
+  <script src="libs/leaflet-heatmap.js"></script> <!---->
   <!-- ! Библиотека для вычисления площади полигона -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js"></script>
-  <link rel="stylesheet" href="./libs/leaflet.css" />
-  <link rel="stylesheet" href="./libs/leaflet-measure.css" />
-  <link rel="stylesheet" href="libs/MarkerCluster.css">
-  <link rel="stylesheet" href="libs/MarkerCluster.Default.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js"></script> <!---->
+  <link rel="stylesheet" href="./libs/leaflet.css" /> <!---->
+  <link rel="stylesheet" href="./libs/leaflet-measure.css" /> <!---->
+  <link rel="stylesheet" href="libs/MarkerCluster.css"> <!---->
+  <link rel="stylesheet" href="libs/MarkerCluster.Default.css"> <!---->
   <style>
     html,
     body,
